--- a/MvcApplication2/MvcApplication2.csproj
+++ b/MvcApplication2/MvcApplication2.csproj
@@ -390,12 +390,12 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\AddNewTask.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\EditTaskWindow.cshtml" />
     <Content Include="Views\Home\GetChildren.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\NewTaskWindow.cshtml" />
+    <Content Include="Views\Home\TaskPart.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
