--- a/MvcApplication2/MvcApplication2.csproj
+++ b/MvcApplication2/MvcApplication2.csproj
@@ -285,6 +285,8 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
+    <Content Include="Scripts\edittaskscript.js" />
+    <Content Include="Scripts\indexscript.js" />
     <Content Include="Scripts\jquery-2.1.1.js" />
     <Content Include="Scripts\jquery-2.1.1.min.js" />
     <Content Include="Scripts\jquery-2.1.1.min.map" />
@@ -351,6 +353,7 @@
     <Content Include="Scripts\locales\bootstrap-datepicker.zh-CN.js" />
     <Content Include="Scripts\locales\bootstrap-datepicker.zh-TW.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\newtaskscript.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
