--- a/MvcApplication2/Web.config
+++ b/MvcApplication2/Web.config
@@ -47,7 +47,7 @@
   </runtime>
   
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=m5wabqo98t.database.windows.net,1433;Initial Catalog=test;Integrated Security=False;User ID=OVME;Password=horsedose!1;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=DapperTest.DataContext;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
