--- a/MvcApplication2/packages.config
+++ b/MvcApplication2/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.5.2" targetFramework="net45" />
   <package id="bootstrap" version="3.2.0" targetFramework="net45" />
   <package id="Bootstrap.Datepicker" version="1.3.0" targetFramework="net45" />
   <package id="Dapper" version="1.37" targetFramework="net45" />
